# fastapi-quickstart

./: .coverage  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test.txt
.github/workflows/: actions-fastapi  actions-fastapi.yml
app/: dependencies.py  main.py
app/internal/: admin.py
app/routers/: items.py  models.py  users.py
routers/: models.py  users.py
tests/: test_validacion.py
